# dodo-cli-

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  CREATE_DODO_CLI.md  DODO_Documentation.md  FINAL_PUSH_GUIDE.md  GITHUB_FIX.md  GITHUB_SETUP.md  INSTALLATION.md  LICENSE  PUSH_INSTRUCTIONS.md  README.md  REPOSITORY_DESCRIPTION.md  convert_to_rosbag.py  create_dataset_with_duplicates.py  create_sample_dataset.py  create_sample_rosbag.py  dodo.py  generate_pdf.py  index.html  push_commands.sh  push_to_personal.sh  pyproject.toml  sample_usage_example.py  setup.cfg  simple_push.sh
exported1_dataset/data/images/: camera_image_00000001.json
exported_dataset/data/actions/: cmd_vel_00000006.json
exported_dataset/data/images/: camera_image_00000004.json
exported_dataset/data/imu/: imu_00000002.json  imu_00000005.json
exported_dataset/metadata/: episodes.json  metadata.json  sensors.json
my_dataset/: dodo.json
my_dataset/raw/: log.json
my_ros_dataset/: dodo.json
my_ros_dataset/raw/: simple_log.json
new_export/data/actions/: cmd_vel_00000003.json
output/data/actions/: cmd_vel_00000002.json  cmd_vel_00000006.json
output/data/images/: camera_front_image_00000000.json
output/data/imu/: imu_00000001.json  imu_00000005.json
output/data/lidar/: lidar_points_00000003.json  (+1 more)
output/metadata/: episodes.json  metadata.json  sensors.json
rosbag2_2026_04_26-21_50_48/: metadata.yaml
screenshots/: README.md  dodo-list.txt  dodo-welcome.txt
src/dodo/: __init__.py  __main__.py  alignment.py  cli.py  config.py  exporter.py  filter.py  metadata.py  models.py  project.py  security.py  sensor_detection.py  validation.py
test_duplicates/: dodo.json
test_duplicates/raw/: dataset_with_duplicates.json
test_robot_dataset/: dodo.json
test_robot_dataset/raw/: sample_robot_data.json
tests/: test_dodo_cli.py
tmp_dataset2/: dodo.json
(+4 files in other folders)
